Name:                chaselev-deque
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Ryan R. Newton, Edward Kmett 
Maintainer:          rrnewton@gmail.com
Category:            Data, Concurrent
Build-type:          Simple
Cabal-version:       >=1.2

Synopsis: Chase & Lev work-stealing lock-free double-ended queues (deques).


Library
  exposed-modules:   Data.Concurrent.Deque.ChaseLev.DequeInstance,
                     Data.Concurrent.Deque.ChaseLev,
                     Data.Concurrent.Deque.ReactorDeque
  build-depends:     base >= 4.4.0.0, array, transformers, bits-atomic,
                     abstract-deque
  ghc-options: -O2
