Name:                chaselev-deque
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Ryan R. Newton, Edward Kmett 
Maintainer:          rrnewton@gmail.com
Category:            Data, Concurrent
Build-type:          Simple
Cabal-version:       >=1.2

Homepage: https://github.com/rrnewton/haskell-lockfree-queue/wiki

Synopsis: Chase & Lev work-stealing lock-free double-ended queues (deques).


Library
  exposed-modules:   Data.Concurrent.Deque.ChaseLev.DequeInstance,
                     Data.Concurrent.Deque.ChaseLev,
                     Data.Concurrent.Deque.ReactorDeque
  build-depends:     base >= 4.4.0.0, array, transformers, bits-atomic,
                     abstract-deque, vector,
                     IORefCAS >= 0.2
  ghc-options: -O2


Source-Repository head
    Type:         git
    Location:     git://github.com/rrnewton/haskell-lockfree-queue.git


Test-Suite test-chaselev-deque
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
    build-depends: base >= 4.4.0.0 && < 5, IORefCAS >= 0.2, abstract-deque, 
                   HUnit, test-framework, test-framework-hunit
    ghc-options: -O2 -threaded -rtsopts 
